[gd_scene load_steps=3 format=2]

[ext_resource path="res://core/ui/character_status/character_status.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=2]

[node name="CharacterStatus" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.298039 )

[node name="LabelSkillPiloting" type="Label" parent="."]
margin_left = 317.0
margin_top = 244.0
margin_right = 458.0
margin_bottom = 281.0
theme = ExtResource( 2 )
text = "Skill Piloting: "

[node name="LabelSkillTrading" type="Label" parent="."]
margin_left = 317.0
margin_top = 292.0
margin_right = 458.0
margin_bottom = 329.0
theme = ExtResource( 2 )
text = "Skill Trading: "

[node name="ButtonClose" type="Button" parent="."]
margin_left = 352.0
margin_top = 432.0
margin_right = 529.0
margin_bottom = 538.0
theme = ExtResource( 2 )
text = "Close"

[node name="ButtonAddWP" type="Button" parent="."]
margin_left = 766.0
margin_top = 368.0
margin_right = 943.0
margin_bottom = 474.0
theme = ExtResource( 2 )
text = "ADD WP"

[node name="ButtonAddFP" type="Button" parent="."]
margin_left = 763.0
margin_top = 220.0
margin_right = 940.0
margin_bottom = 326.0
theme = ExtResource( 2 )
text = "Add FP"

[connection signal="pressed" from="ButtonClose" to="." method="_on_ButtonClose_pressed"]
[connection signal="pressed" from="ButtonAddWP" to="." method="_on_ButtonAddWP_pressed"]
[connection signal="pressed" from="ButtonAddFP" to="." method="_on_ButtonAddFP_pressed"]
